css fix  for x overflow

--- a/front/src/styles/_general.scss
+++ b/front/src/styles/_general.scss
@@ -16,6 +16,7 @@ body {
 	font-size: 1.4rem;
 	line-height: 1.85;
 	position: relative;
+	overflow-x: hidden;
 }
 
 h1,
